tests/snapshots/errors/unknown_type_literal.mc
// Error: unknown type in type literal

let x = UnknownType { field: 42 };
